tolk-tester/tests/invalid-syntax/err-3821.tolk

/**
@path_mapping @lib=
@compilation_should_fail
@stderr invalid path mapping: expected format: @custom-path=/absolute/folder
 */
